--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -34,6 +34,7 @@ utf8-chars = "3.0.5"
 anyhow = "1.0.98"
 assert_matches = "1.5.0"
 criterion = { version = "0.5.1", features = ["html_reports"] }
+insta = { version = "1.43.1", features = ["ron"] }
 pretty_assertions = { version = "1.4.1", features = ["unstable"] }
 serde = { version = "1.0.219", features = ["derive"] }
 
