feat(printf): replace printf impl with uucore wrapper (#552)
Also adds a pile of compat tests for printf builtin.

--- a/brush-core/Cargo.toml
+++ b/brush-core/Cargo.toml
@@ -50,6 +50,7 @@ tokio = { version = "1.45.1", features = [
     "signal",
     "sync",
 ] }
+uucore = { version = "0.1.0", default-features = false, features = ["format"] }
 
 [target.'cfg(windows)'.dependencies]
 homedir = "0.3.4"
