fix(arithmetic): correct left shift handling

--- a/brush-shell/tests/cases/here.yaml
+++ b/brush-shell/tests/cases/here.yaml
@@ -19,6 +19,19 @@ cases:
           echo "This is after"
     args: ["./script.sh"]
 
+  - name: "Here doc in a function"
+    stdin: |
+      function myfunc() {
+        if true
+        then
+          cat << END-MARKER
+      Something here...
+      END-MARKER
+        fi
+      }
+
+      myfunc
+
   - name: "Here doc with expansions"
     stdin: |
       cat <<END-MARKER
