--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -29,6 +29,7 @@ peg = "0.8.5"
 thiserror = "2.0.12"
 tracing = "0.1.41"
 utf8-chars = "3.0.5"
+winnow = "0.7.11"
 
 [dev-dependencies]
 anyhow = "1.0.98"
