feat(prompt): Implement the parser using chumsky

--- a/brush-parser/Cargo.toml
+++ b/brush-parser/Cargo.toml
@@ -24,6 +24,7 @@ debug-tracing = ["peg/trace"]
 [dependencies]
 arbitrary = { version = "1.4.1", optional = true, features = ["derive"] }
 cached = "0.55.1"
+chumsky = "0.10.1"
 indenter = "0.3.3"
 peg = "0.8.5"
 thiserror = "2.0.12"
