--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -538,6 +538,9 @@ jobs:
           # Provide alternate path for bash-completion
           echo "BASH_COMPLETION_PATH=$(nix path-info 'nixpkgs#bash-completion')/share/bash-completion/bash_completion">>"$GITHUB_ENV"
 
+          # Forcibly add system paths
+          echo "BRUSH_COMPAT_TEST_PATH_VAR=$PATH">>"$GITHUB_ENV"
+
       # Checkout sources for YAML-based test cases
       - name: Checkout
         uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
