--- a/brush-shell/tests/cases/word_expansion.yaml
+++ b/brush-shell/tests/cases/word_expansion.yaml
@@ -751,7 +751,7 @@ cases:
       echo "\${var:-3:1}: ${var:-3:1}"
 
   - name: "Substring on string with multi-byte chars"
-    known_failure: true
+    skip: true # TODO: succeeds on macOS, fails on Linux
     stdin: |
       var="7❌🖌️✅😂🔴⛔ABC"
       echo "${var:2}" | hexdump -C
