--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -215,12 +215,16 @@ jobs:
       - name: "Install recent bash for tests"
         if: ${{ matrix.homebrew_supported }}
         run: |
+          # git setup to pacify brew
+          git config --global user.name "Brush CI"
+          git config --global user.email "brush@example.com"
           # Set up custom local tap
           brew tap-new $USER/local-tap
           # Find our intended version of bash
           brew extract --version=5.2.15 bash $USER/local-tap
           # Install it
           brew install bash@5.2.15
+          brew info bash
           # Find the path
           BASH_PATH="$(brew --prefix bash)/bin/bash"
           # Log what we're using
