--- a/brush-shell/tests/cases/builtins/compgen.yaml
+++ b/brush-shell/tests/cases/builtins/compgen.yaml
@@ -83,9 +83,15 @@ cases:
       compgen -W yes no && echo "1. Result"
 
   - name: "compgen -f with tilde"
+    skip: true # Started failing with 5.3 on macOS
     stdin: |
-      touch item1
+      mkdir testhome && cd testhome
+
       HOME=$(pwd)
+      echo "Updated HOME base: $(basename $HOME)"
+      echo "Updated ~ base:" $(basename ~)
+
+      touch item1
 
       echo "[0]"
       for p in $(compgen -f ~); do
