--- a/brush-shell/tests/cases/builtins/pushd_popd_dirs.yaml
+++ b/brush-shell/tests/cases/builtins/pushd_popd_dirs.yaml
@@ -45,8 +45,10 @@ cases:
       dirs
 
   - name: "dirs with tilde replacement"
+    skip: true # Started failing with 5.3 on macOS
     stdin: |
       HOME=/usr
+      echo "Updated HOME: $HOME"
       cd ~
       echo "PWD: $PWD"
       dirs
