fix: address benchmark loss

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -402,6 +402,7 @@ jobs:
 
       - name: Performance analysis on main
         run: |
+          set -euo pipefail
           cargo bench --workspace --benches -- --output-format bencher | tee benchmarks.txt
         working-directory: main
 
