--- a/brush-shell/Cargo.toml
+++ b/brush-shell/Cargo.toml
@@ -14,6 +14,9 @@ rust-version.workspace = true
 [package.metadata.binstall]
 pkg-url = "{ repo }/releases/download/{ name }-v{ version }/brush-{ target }{ archive-suffix }"
 
+[lib]
+bench = false
+
 [[bin]]
 name = "brush"
 path = "src/main.rs"
